--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
     <section class="hero">
         <h1>Optimize Beyond Limits</h1>
         <p>Boost your PC’s performance today.</p>
+        <a href="https://drive.google.com/drive/folders/15jNg9AzOoG0QXCPtmdDSkjw4FdqEkY6u?usp=drive_link">
         <button>Optimize</button>
+        </a>
     </section>
 
     <section class="comparison">
